--- a/Final-Project/App.config
+++ b/Final-Project/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Final_Project.Properties.Settings.QLPTConnectionString"
-            connectionString="Data Source=TRUONGGIANG\SQLEXPRESS;Initial Catalog=QLPT;Integrated Security=True"
+            connectionString=""
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
