--- a/Final-Project/Final-Project.csproj
+++ b/Final-Project/Final-Project.csproj
@@ -48,6 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MaterialSkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MaterialSkin.Updated.0.2.2\lib\MaterialSkin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -92,6 +95,12 @@
     <Compile Include="forgotPassword.Designer.cs">
       <DependentUpon>forgotPassword.cs</DependentUpon>
     </Compile>
+    <Compile Include="formOK.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formOK.Designer.cs">
+      <DependentUpon>formOK.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +113,7 @@
     <Compile Include="HoaDon.Designer.cs">
       <DependentUpon>HoaDon.cs</DependentUpon>
     </Compile>
+    <Compile Include="MaterialMessageBox.cs" />
     <Compile Include="NV.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +159,9 @@
     <EmbeddedResource Include="forgotPassword.resx">
       <DependentUpon>forgotPassword.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="formOK.resx">
+      <DependentUpon>formOK.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -173,6 +186,7 @@
     <EmbeddedResource Include="QLPT.resx">
       <DependentUpon>QLPT.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
