--- a/Final-Project/Final-Project.csproj
+++ b/Final-Project/Final-Project.csproj
@@ -83,23 +83,24 @@
     <Compile Include="CauHinh.Designer.cs">
       <DependentUpon>CauHinh.cs</DependentUpon>
     </Compile>
-    <Compile Include="changePassword.cs">
+    <Compile Include="ChangePassword.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="changePassword.Designer.cs">
-      <DependentUpon>changePassword.cs</DependentUpon>
+    <Compile Include="ChangePassword.Designer.cs">
+      <DependentUpon>ChangePassword.cs</DependentUpon>
     </Compile>
-    <Compile Include="forgotPassword.cs">
+    <Compile Include="CustomerDAO.cs" />
+    <Compile Include="ForgotPassword.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="forgotPassword.Designer.cs">
-      <DependentUpon>forgotPassword.cs</DependentUpon>
+    <Compile Include="ForgotPassword.Designer.cs">
+      <DependentUpon>ForgotPassword.cs</DependentUpon>
     </Compile>
-    <Compile Include="formOK.cs">
+    <Compile Include="FormOK.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formOK.Designer.cs">
-      <DependentUpon>formOK.cs</DependentUpon>
+    <Compile Include="FormOK.Designer.cs">
+      <DependentUpon>FormOK.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -122,6 +123,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="QLKH.CS">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QLPTDataSet1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Room.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room.Designer.cs">
+      <DependentUpon>Room.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RoomDAO.cs" />
     <EmbeddedResource Include="AddKH.resx">
       <DependentUpon>AddKH.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,14 +166,14 @@
     <EmbeddedResource Include="CauHinh.resx">
       <DependentUpon>CauHinh.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="changePassword.resx">
-      <DependentUpon>changePassword.cs</DependentUpon>
+    <EmbeddedResource Include="ChangePassword.resx">
+      <DependentUpon>ChangePassword.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="forgotPassword.resx">
-      <DependentUpon>forgotPassword.cs</DependentUpon>
+    <EmbeddedResource Include="ForgotPassword.resx">
+      <DependentUpon>ForgotPassword.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="formOK.resx">
-      <DependentUpon>formOK.cs</DependentUpon>
+    <EmbeddedResource Include="FormOK.resx">
+      <DependentUpon>FormOK.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -173,18 +186,17 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="QLKH.resx">
       <DependentUpon>QLKH.CS</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="QLPT.resx">
       <DependentUpon>QLPT.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room.resx">
+      <DependentUpon>Room.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -235,6 +247,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\house.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
